modules/demo-workloads/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - argocd.k8s-demo.plgrnd.be
      secretName: argocd-secret
  rules:
  - host: argocd.k8s-demo.plgrnd.be
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
        path: /
